# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Linux Foundation

[build-system]
requires = [
    "setuptools>=68.0",
    "setuptools-scm>=8.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "python-nss"
dynamic = ["version"]
description = "Python bindings for Network Security Services (NSS) and Netscape Portable Runtime (NSPR)"
readme = "README"
license = {text = "MPLv2.0 or GPLv2+ or LGPLv2+"}
requires-python = ">=3.10"
authors = [
    {name = "John Dennis", email = "jdennis@redhat.com"},
]
maintainers = [
    {name = "John Dennis", email = "jdennis@redhat.com"},
]
keywords = [
    "nss",
    "nspr",
    "cryptography",
    "ssl",
    "tls",
    "pki",
    "x509",
    "security",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL-2.0)",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-forked>=1.6.0",
    "pytest-xdist>=3.0.0",
    "pytest-order>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-forked>=1.6.0",
    "pytest-xdist>=3.0.0",
    "pytest-order>=1.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "http://www.mozilla.org/projects/security/pki/python-nss"
Documentation = "http://www.mozilla.org/projects/security/pki/python-nss"
Repository = "https://github.com/tiran/python-nss"
Issues = "https://github.com/tiran/python-nss/issues"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["nss*"]
namespaces = false

[tool.setuptools.package-dir]
nss = "src"

[tool.setuptools-scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
# Use standard v-prefixed tags (e.g., v1.0.1)
# Legacy tags like PYNSS_RELEASE_1_0_0 can be ignored
write_to = "src/_version.py"
write_to_template = """
# This file is auto-generated by setuptools-scm
__version__ = "{version}"
__version_tuple__ = {version_tuple}
"""

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--forked",
]
markers = [
    "nss_init: mark test as requiring NSS initialization",
    "requires_db: mark test as requiring NSS database",
    "slow: mark test as slow running",
    "forked: mark test to run in forked process for isolation",
    "order: specify test execution order",
]

[tool.coverage.run]
source = ["nss"]
branch = true
omit = [
    "*/test/*",
    "*/tests/*",
    "*/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["nss"]

[tool.cibuildwheel]
skip = ["pp*", "*-musllinux*"]
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "yum install -y nss-devel nspr-devel || apt-get update && apt-get install -y libnss3-dev libnspr4-dev"

[tool.cibuildwheel.macos]
before-all = "brew install nss nspr"
