# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: 2025 The Linux Foundation

[build-system]
requires = [
    "meson-python>=0.16.0",
    "meson>=1.2.0",
    "ninja",
]
build-backend = "mesonpy"

[project]
name = "python-nss"
version = "1.0.1"
description = "Python bindings for Network Security Services (NSS) and Netscape Portable Runtime (NSPR)"
readme = "README.md"
license = "MPL-2.0 OR GPL-2.0-or-later OR LGPL-2.0-or-later"
license-files = ["LICENSE", "LICENSES/MPL-2.0.txt"]
requires-python = ">=3.10"
authors = [
    {name = "John Dennis", email = "jdennis@redhat.com"},
    {name = "Matthew Watkins", email = "mwatkins@linuxfoundation.org"},
]
maintainers = [
    {name = "Matthew Watkins", email = "mwatkins@linuxfoundation.org"},
]
keywords = [
    "nss",
    "nspr",
    "cryptography",
    "ssl",
    "tls",
    "pki",
    "x509",
    "security",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",

    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "coverage[toml]>=7.0.0",
    "pytest-xdist>=3.8",
    "meson>=1.2.0",
    "meson-python>=0.16.0",
    "ninja",
]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "coverage[toml]>=7.0.0",
    "pytest-xdist>=3.8",
    "ruff>=0.14.0",
    "build>=1.3.0",
    "meson>=1.2.0",
    "meson-python>=0.16.0",
    "ninja",
]

[project.urls]
Homepage = "http://www.mozilla.org/projects/security/pki/python-nss-ng"
Documentation = "http://www.mozilla.org/projects/security/pki/python-nss-ng"
Repository = "https://github.com/ModeSevenIndustrialSolutions/python-nss-ng"
Issues = "https://github.com/ModeSevenIndustrialSolutions/python-nss-ng/issues"

[tool.meson-python.args]
# Meson build arguments can be specified here if needed
# For example, to enable debug builds:
# setup = ['-Dbuildtype=debug']

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Note: Use -n0 for serial execution for 100% reliability
# Parallel execution (-n=auto) may have intermittent failures in PKCS12 tests
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=nss",
    "--cov-report=xml",
    "--cov-report=html",
]
markers = [
    "nss_init: mark test as requiring NSS initialization",
    "requires_db: mark test as requiring NSS database",
    "slow: mark test as slow running",
    "allow_insecure: mark test as allowing insecure/legacy configurations",
]

[tool.coverage.run]
source = ["nss"]
branch = true
data_file = ".coverage"
omit = [
    "*/test/*",
    "*/tests/*",
    "*/_version.py",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "S101",  # assert detected (allow in tests)
    "T201",  # print found (intentional in examples)
    "UP006", # Use `X` instead of `typing.X` for type annotations (Python 3.9 compat)
    "UP007", # Use `X | Y` for union types (Python 3.9 compat)
    "UP035", # Import from `typing` is deprecated (Python 3.9 compat)
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E402", "S101", "S105", "S106"]  # Allow asserts and hardcoded passwords in tests
"doc/examples/*.py" = ["T201", "S105", "S106"]  # Allow prints and test passwords in examples
"test/setup_certs.py" = ["S603", "S607"]  # Allow subprocess calls in cert setup

[tool.ruff.lint.isort]
known-first-party = ["nss"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true

[tool.cibuildwheel]
skip = ["pp*", "*-musllinux*"]
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "yum install -y nss-devel nspr-devel pkg-config || apt-get update && apt-get install -y libnss3-dev libnspr4-dev pkg-config"

[tool.cibuildwheel.macos]
before-all = "brew install nss nspr pkg-config"
